# qt_srt

./: .gitignore  .gitmodules  readme.md
QtSrt/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  common.cmake  qt_common.cmake  readme.md
QtSrt/MockCameraApp/: CMakeLists.txt  cameracontroller.cpp  cameracontroller.h  main.cpp  main.qml  mockcamera.h
QtSrt/MockCameraApp1/: CMakeLists.txt  main.cpp
QtSrt/MockCameraApp2/: CMakeLists.txt  CameraController.cpp  MockCamera.cpp  main.cpp
QtSrt/MockCameraApp2/qml/: CameraView.qml  main.qml
QtSrt/QtSrtMainLib/: CMakeLists.txt  CMakeUserPresets.json  QtSrtMainLib.cpp
QtSrt/QtSrtMainLib/include/QtSrtMainLib/: CameraController.h  MockCamera.h  QtSrtMainLib.h  qtsrtmainlib_global.h
QtSrt/QtSrtMainLib/src/: CameraController.cpp  MockCamera.cpp  QtSrtMainLib.cpp
QtSrt/RTMPViewer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  main.cpp  main.qml
QtSrt/SimulateCamera/: CMakeLists.txt  main.cpp  main.qml
QtSrt/docs/: pkgconfig_setup.md  readme.md  streaminfo.md  unix_setup.md  vcpkg_setup.md
initial_musings/QMakeTest/Console2/: main.cpp
initial_musings/QMakeTest/QLib1/: QLib1.pro
initial_musings/QMakeTest/QtQuick1/: main.qml
initial_musings/QMakeTest/Widget1/: main.cpp
initial_musings/QtCreator/N05_QtQuickAndroid/: CMakeLists.txt
initial_musings/VisualStudio/01_QtConsole/: 01_QtConsole.vcxproj
initial_musings/VisualStudio/04_QtShowCameraFeed/: 04_QtShowCameraFeed.vcxproj  _QtShowCameraFeed.cpp  _QtShowCameraFeed.h
initial_musings/VisualStudio/QtSrtLib/: QtSrtLib.vcxproj  QtSrtLib.vcxproj.filters  qtsrtlib_global.h
qt_srt/: Qt.sln
qt_srt/02_QtTcpServer/: 02_QtTcpServer.vcxproj  main.cpp
qt_srt/03_QtTcpClient/: 03_QtTcpClient.vcxproj  03_QtTcpClient.vcxproj.filters  TcpClient.h  main.cpp
qt_srt/04_QtShowCameraFeed/: 04_QtShowCameraFeed.vcxproj  04_QtShowCameraFeed.vcxproj.filters  CameraFeed.h  _QtShowCameraFeed.qrc  _QtShowCameraFeed.ui  main.cpp
qt_srt/QMakeTest/: .gitignore  QMakeTest.pro
qt_srt/QMakeTest/Console1/: main.cpp
qt_srt/QMakeTest/QLib1/: QLib1.pro  qlib1.cpp  qlib1.h
qt_srt/QMakeTest/Widget1/: Widget1.pro
qt_srt/QtCreator/05_QtQuick_Android/: CMakeLists.txt  main.cpp
qt_srt/QtCreator/N05_QtQuickAndroid/: main.cpp
qt_srt/QtSrtLib/: CMakeLists.txt  QtSrtLib_global.h  qtsrtlib.cpp  qtsrtlib.h
qt_srt/VisualStudio/: Qt.sln
qt_srt/VisualStudio/01_QtConsole/: 01_QtConsole.sln  01_QtConsole.vcxproj
qt_srt/VisualStudio/02_QtTcpServer/: 02_QtTcpServer.vcxproj  main.cpp
qt_srt/VisualStudio/03_QtTcpClient/: 03_QtTcpClient.vcxproj  TcpClient.cpp
qt_srt/VisualStudio/04_QtShowCameraFeed/: 04_QtShowCameraFeed.vcxproj.filters  CameraFeed.cpp
qt_srt/VisualStudio/QtSrtLib/: QtSrtLib.cpp  QtSrtLib.h
